@@ -4,15 +4,40 @@ import javafx.scene.canvas.Canvas;
 import javafx.scene.canvas.GraphicsContext;
 import javafx.scene.input.MouseEvent;
 import javafx.scene.paint.Color;
+import javafx.scene.shape.Line;
 
+import java.awt.*;
 import java.util.LinkedList;
 
-public class PolygonTool implements Tool{
+public class EllipseTool implements Tool{
     private LinkedList<Polygon> polygons;
     private Canvas drawingCanvas;
+    private double startingX;
+    private double startingY;
+    private double endX =0;
+    private double endY =0;
+    private double size = 50;
+    private boolean selectOn = false;
+    private boolean drawSquare = false;
 
-    public PolygonTool(LinkedList<Polygon> new_Polygon) {
+
+    public EllipseTool(LinkedList<Polygon> new_Polygon) {
         polygons = new_Polygon;
+        // TODO: Refactor this out. (Fixes polygons not being added somehow)
+        polygons.add(new Polygon());
+    }
+
+    public EllipseTool(LinkedList<Polygon> new_Polygon, int new_Size) {
+        polygons = new_Polygon;
+        size = new_Size;
+        if(new_Size < 4)
+        {
+            size = 4;
+        }
+        if(new_Size > 200)
+        {
+            size = 200;
+        }
         // TODO: Refactor this out. (Fixes polygons not being added somehow)
         polygons.add(new Polygon());
     }
@@ -42,29 +67,25 @@ public class PolygonTool implements Tool{
 
     @Override
     public void onMouseClicked(MouseEvent e) {
-        Vertex selectedVertex = null;
-
-        for (Polygon p : polygons) {
-            if ((selectedVertex = p.findSelected()) != null) {
-                if (polygons.get(polygons.size() - 1).size() > 3) {
-                    polygons.add(new Polygon());
-                }
-                break;
+        if(selectOn ==false) {
+            drawSquare = false;
+            for (double i = 0; i < size; i++) {
+                double t = (360 / size) * i;
+                double newX = (startingX + ((endX - startingX) / 2)) + ((endX - startingX) / 2) * Math.cos(t * Math.PI / 180.0);
+                double newY = (startingY + ((endY - startingY) / 2)) + ((endY - startingY) / 2) * Math.sin(t * Math.PI / 180.0);
+                Polygon p = null;
+                p = polygons.getLast();
+                p.add(newX, newY);
             }
+            polygons.add(new Polygon());
         }
-
-        // TODO: Check if we really need this if statement.
-        if (selectedVertex == null) {
-            Polygon p = null;
-
-            p = polygons.getLast();
-            p.add(e.getX(), e.getY());
-        }
+        selectOn = false;
         draw();
     }
 
     @Override
     public void onMouseDragged(MouseEvent e) {
+
         Vertex selectedVertex  = null;
 
         for (Polygon p : polygons) {
@@ -74,11 +95,15 @@ public class PolygonTool implements Tool{
                 draw();
             }
         }
+
+        endX = e.getX();
+        endY = e.getY();
         draw();
     }
 
     @Override
     public void onMousePressed(MouseEvent e) {
+
         Vertex selectedVertex = null;
         boolean onlyOne = false;
         for (Polygon p : polygons) {
@@ -92,10 +117,18 @@ public class PolygonTool implements Tool{
                 selectedVertex.setColor(Color.RED);
                 selectedVertex.setSelected(true);
                 onlyOne = true;
+                selectOn = true;
             }
         }
+        if(onlyOne == false) {
+            startingX = e.getX();
+            startingY = e.getY();
+            endX = e.getX();
+            endY = e.getY();
+            drawSquare = true;
+        }
         draw();
-    }
+}
 
     @Override
     public void onMouseReleased(MouseEvent e) {
@@ -110,9 +143,26 @@ public class PolygonTool implements Tool{
     @Override
     public void draw () {
         GraphicsContext gc = drawingCanvas.getGraphicsContext2D();
-
+        gc.setLineDashOffset(0d);
+        gc.setLineDashes(10d, 10d);
+        gc.setStroke(Color.BLACK);
+        if(drawSquare == true)
+        {
+            gc.strokeLine(startingX, startingY, startingX, endY);
+            gc.strokeLine(startingX, startingY, endX, startingY);
+            gc.strokeLine(startingX, endY, endX, endY);
+            gc.strokeLine(endX, startingY, endX, endY);
+            gc.setLineDashOffset(10d);
+            gc.setStroke(Color.WHITE);
+            gc.strokeLine(startingX, startingY, startingX, endY);
+            gc.strokeLine(startingX, startingY, endX, startingY);
+            gc.strokeLine(startingX, endY, endX, endY);
+            gc.strokeLine(endX, startingY, endX, endY);
+        }
+        gc.setLineDashes(null);
         for (Polygon p : polygons) {
             p.draw(gc);
         }
+
     }
 }
